--- a/web/cadastro/cadastrarAtividade/cadastrar_atividade.css
+++ b/web/cadastro/cadastrarAtividade/cadastrar_atividade.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: linear-gradient(135deg, #dfe3ed, #f8f9fb); /* fundo suave azul marinho claro */
+  background: linear-gradient(135deg, #dfe3ed, #f8f9fb);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-  color: #0b1d3a; /* azul marinho escuro */
+  color: #0b1d3a;
   font-size: 2em;
   margin-bottom: 30px;
   text-align: center;
